samples/_failures_safe/1761279898_1b4878_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a35db863.c: In function ‘update_stats’:
./samples/SAFE/__tmp_a35db863.c:138: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_a35db863.c:137:9: error: expected declaration or statement at end of input
  137 |         if
      |         ^~
./samples/SAFE/__tmp_a35db863.c:137:9: error: expected declaration or statement at end of input
